--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -360,10 +360,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="particle-horizontal-blue" translatesAutoresizingMaskIntoConstraints="NO" id="Hcq-Tv-47F">
-                                        <rect key="frame" x="205" y="8" width="190" height="60"/>
+                                        <rect key="frame" x="236" y="8" width="128" height="60"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="190" id="IJu-e9-Pwf"/>
+                                            <constraint firstAttribute="width" constant="128" id="IJu-e9-Pwf"/>
                                             <constraint firstAttribute="height" constant="60" id="d0u-Kw-IIq"/>
                                         </constraints>
                                     </imageView>
@@ -483,7 +483,7 @@
 
 Tinker is the fastest and easiest way to prototype and play with your Particle Photon.
 
-Here you can access the basic input/output functions of the Spark Photon without writing a line of code.
+Here you can access the basic input/output functions of the Photon without writing a line of code.
 
 Tap any pin to get started. Try digitalWrite on D7; there's a LED attached.
 
@@ -492,8 +492,8 @@ Enjoy!</string>
                                         <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="15"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-The Spark Team" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5z-Hi-GOP">
-                                        <rect key="frame" x="155" y="411" width="129" height="16"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-The Particle Team" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5z-Hi-GOP">
+                                        <rect key="frame" x="155" y="411" width="142" height="16"/>
                                         <fontDescription key="fontDescription" name="Gotham-ExtraLight" family="Gotham" pointSize="16"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -723,7 +723,7 @@ Enjoy!</string>
         <image name="alizarin" width="5" height="37"/>
         <image name="cyan" width="5" height="37"/>
         <image name="emerald" width="5" height="37"/>
-        <image name="imgChevronLeft" width="64" height="64"/>
+        <image name="imgChevronLeft" width="128" height="128"/>
         <image name="imgDeviceShadow" width="307" height="465"/>
         <image name="imgGreenCircle" width="256" height="256"/>
         <image name="imgPencil" width="64" height="64"/>
